--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 layout: default
 ---
 
-<h1>Git Training</h1>
+<h1>Git Training Companion</h1>
 <p>
-    Here is the Git Training walkthrough, an ambitious effort of a web developer, call him Joe, to create the new facebook. First things first, Joe must learn how to use Git in order to collaborate with his colleagues
+    Hi, I'm Fotis and this is the git training companion. This could be a PowerPoint presentation but it isn't; It's a Jekyll blog hosted on GitHub pages, just because git is awesome and so is GitHub. This is your takeaway from this training and you may feel free to browse it, copy & paste from it, but also contribute to it, by submitting pull requests. You don't know how to `git`? Well you're missing out, so please pay attention to the training and use your super powers to start committing. You may find my contact details in the <a href="{{ site.baseurl }}/about">About page</a> and also the footer of this site.
+    <br><br>
+    Also, there are tons of GUI tools for Git and GitHub, but I think learning the git flow in the command line really helps you understand the way Git works and what actions you should take when working with git.
+    <br><br>
+    Thank you for joining the training
 </p>
 
 <h4>Table of contents</h4>
